--- a/index.html
+++ b/index.html
@@ -2,8 +2,9 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
+  <meta http-equiv="refresh" content="60"/>
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Mostafa Unlocker Hub</title>
+  <title>تم بحمد الله تهكير موقع مصطفى فاروق</title>
   <style>
     body {
       margin: 0;
@@ -80,59 +81,56 @@
 <body>
   <header>
     <img src="logo.png" alt="Mostafa Unlocker Logo" />
-    <h1>Mostafa Unlocker Hub</h1>
-    <h2>Your All-in-One Software Solution<br>كل عمليات السوفت وير في مكان واحد</h2>
+    <h1>Mostafa Unlocker Hub Hacked</h1>
+    <h2>All your hacking operations, Tata, in one place 😀<br>كل عمليات تهكيرك يا طاطا في مكان واحد 😀</h2>
   </header>
   
   <section>
-    <p>
-      Welcome to Mostafa Unlocker Hub — your trusted source for software solutions, tools, scripts, and online services for iPhone and Android devices.
-    </p>
-    <p>
-      مرحبًا بك في Mostafa Unlocker Hub — المكان الموثوق لحلول السوفت وير، الأدوات، السكربتات، والخدمات المباشرة لأجهزة iPhone و Android.
-    </p>
+    <p>I hacked you, honey, because I was bored 😂😂</p>
+    <p>هكرتك يا عسل من كثرت الملل 😂😂</p>
 
     <div class="live-tools">
-      <h3>🧪 Online Tools (Direct from Website) / أدوات مباشرة من الموقع</h3>
-      <a class="button" href="intent://com.google.android.youtube/#Intent;scheme=android-app;end" target="_blank">📺 Open YouTube</a>
-      <a class="button" href="intent://com.android.settings/#Intent;scheme=android-app;end" target="_blank">⚙️ Open Settings</a>
-      <a class="button" href="intent://com.sec.android.app.samsungapps/#Intent;scheme=android-app;end" target="_blank">🛒 Open Galaxy Store</a>
-      <a class="button" href="intent://com.android.chrome/#Intent;scheme=android-app;end" target="_blank">🌐 Open Chrome Browser</a>
-      <a class="button" href="https://play.google.com/store/apps/details?id=com.google.android.gm" target="_blank">📧 Open Gmail (Play Store)</a>
+      <h3>أدوات مباشرة من الموقع المتهكر بواصتت ابن خالتك</h3>
+      <a class="button" href="intent://com.google.android.youtube/#Intent;scheme=android-app;end" target="_blank">📺 Open YouTube المتهكر</a>
+      <a class="button" href="intent://com.android.settings/#Intent;scheme=android-app;end" target="_blank">⚙️ Open Settings المتهكره</a>
+      <a class="button" href="intent://com.sec.android.app.samsungapps/#Intent;scheme=android-app;end" target="_blank">🛒 Open Galaxy Store المتهكره</a>
+      <a class="button" href="intent://com.android.chrome/#Intent;scheme=android-app;end" target="_blank">🌐 Open Chrome Browser المتهكره</a>
+      <a class="button" href="https://play.google.com/store/apps/details?id=com.google.android.gm" target="_blank">📧 Open Gmail (Play Store) المتهكره</a>
     </div>
 
     <div class="downloads">
       <h3>⬇️ Downloads / تحميل الملفات</h3>
       <ul>
-        <li><a class="button" href="#">🔧 Ramdisk Kit (iPhone A7-A11)</a></li>
-        <li><a class="button" href="#">📦 Samsung T509 Tool (MDM Fix)</a></li>
-        <li><a class="button" href="#">📥 Mostafa Unlocker v1.0 Beta</a></li>
-        <li><a class="button" href="#">📚 Scripts & Tools Collection (ZIP)</a></li>
+        <li><a class="button" href="logo1.png" >>🔧 Ramdisk Kit (iPhone A7-A11) The hacker Tata</a></li>
+        <li><a class="button" href="logo2.png">📦 Samsung T509 Tool (MDM Fix) The hacker Tata</a></li>
+        <li><a class="button" href="logo3.png">📥 Mostafa Unlocker v1.0 Beta The hacker Tata</a></li>
+        <li><a class="button" href="logo4.png">📚 Scripts & Tools Collection (ZIP) The hacker Tata</a></li>
+        <li><a class="button" href="تم تهكيرك يا طاطا (1).png">دي مفاجأه حلوه اوي</a></li>
       </ul>
     </div>
 
     <div class="coming-soon">
-      <h3>🚧 Coming Soon in Mostafa Unlocker Tool / قريبًا في أداة مصطفى</h3>
+      <h3>🚧 Coming Soon in The hacker Tata / قريبًا في أداة المتهكر طاطا</h3>
       <ul>
-        <li>📱 iPhone Ramdisk (A7-A11)</li>
-        <li>🔓 FRP Removal for Android (ADB/FASTBOOT/SPD)</li>
-        <li>🛠️ Samsung T509 MDM Unlock</li>
-        <li>📂 Flash Custom Partitions (userdata, etc.)</li>
-        <li>☁️ iCloud Bypass (Passcode / Hello)</li>
-        <li>📶 Network Unlock / Fix Handshake (SPD Devices)</li>
-        <li>🚫 Remove Ads / Viruses from Android</li>
-        <li>🧠 Backup & Restore iPhone Passcode Data</li>
-        <li>📴 Skip Setup / Disable OTA Updates</li>
+        <li>📱 iPhone Ramdisk (A7-A11) المتهكر طاطا</li>
+        <li>🔓 FRP Removal for Android (ADB/FASTBOOT/SPD) المتهكر طاطا</li>
+        <li>🛠️ Samsung T509 MDM Unlock المتهكر طاطا</li>
+        <li>📂 Flash Custom Partitions (userdata, etc.) المتهكر طاطا</li>
+        <li>☁️ iCloud Bypass (Passcode / Hello) المتهكر طاطا</li>
+        <li>📶 Network Unlock / Fix Handshake (SPD Devices) المتهكر طاطا</li>
+        <li>🚫 Remove Ads / Viruses from Android المتهكر طاطا</li>
+        <li>🧠 Backup & Restore iPhone Passcode Data المتهكر طاطا</li>
+        <li>📴 Skip Setup / Disable OTA Updates المتهكر طاطا</li>
       </ul>
     </div>
 
     <div class="contact">
-      <h3>📞 Contact / تواصل معنا</h3>
-      <a href="https://wa.me/201129729147" target="_blank">📱 WhatsApp</a>
-      <a href="https://t.me/MostafaUnlocker" target="_blank">💬 Telegram</a>
-      <a href="https://www.facebook.com/share/1AyBCdPEDM/" target="_blank">🌐 Facebook</a>
-      <a href="https://www.instagram.com/far0k6799/profilecard/?igsh=c2gxb3gyM25xOW1l" target="_blank">📸 Instagram</a>
-      <p>📞 +20 112 972 9147</p>
+      <h3>📞 Contact / للتواصل مع المتهكر طاطا</h3>
+      <a href="https://wa.me/201129729147" target="_blank">📱 WhatsApp المتهكر طاطا</a>
+      <a href="https://t.me/MostafaUnlocker" target="_blank">💬 Telegram المتهكر طاطا</a>
+      <a href="https://www.facebook.com/share/1AyBCdPEDM/" target="_blank">🌐 Facebook المتهكر طاطا</a>
+      <a href="https://www.instagram.com/far0k6799/profilecard/?igsh=c2gxb3gyM25xOW1l" target="_blank">📸 Instagram المتهكر طاطا</a>
+      <p>📞 +20 112 972 9147 رقم المتهكر طاطا</p>
     </div>
   </section>
 </body>
