--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8" />
   <meta http-equiv="refresh" content="60"/>
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="keywords" content="Mostafa Unlocker Hub Hacked">
   <title>تم بحمد الله تهكير موقع مصطفى فاروق</title>
   <style>
     body {
